--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "aperture",
-  "version": "0.0.1",
-  "description": "A virtual scrolling container",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "karma start --single-run",
-    "build": "webpack"
-  },
-  "author": "Sheng <jedirandy@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.2.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-webpack": "^1.7.0",
-    "webpack": "^1.12.14"
-  }
+    "name": "aperturejs",
+    "version": "0.0.1",
+    "description": "A virtual scrolling container",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "karma start --single-run",
+        "build": "webpack"
+    },
+    "author": "Sheng <jedirandy@gmail.com>",
+    "license": "MIT",
+    "devDependencies": {
+        "babel-core": "^6.7.4",
+        "babel-loader": "^6.2.4",
+        "babel-preset-es2015": "^6.6.0",
+        "karma-chai": "^0.1.0",
+        "karma-mocha": "^0.2.2",
+        "karma-phantomjs-launcher": "^1.0.0",
+        "karma-webpack": "^1.7.0",
+        "webpack": "^1.12.14"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jedirandy/aperture.git"
+    }
 }
